<resources>
	<string name="app_name">eKaranténa</string>
	<string name="app_userAgentAppName" translatable="false">eKarantena</string>
	<string name="notification_channel_persistent">Quarantine watch</string>
	<string name="notification_channel_alarm">Notifies of quarantine check requests and potential breaches</string>
	<string name="notification_scan_title">eKaranténa beží na pozadí</string>
	<string name="notification_scan_text">Dodržiavajte domácu izoláciu</string>
	<string name="notification_scan_problem">Objavil sa problém</string>
	<string name="notification_quarantineLeft_title">Opustili ste domácu izoláciu</string>
	<string name="notification_quarantineInfo_text">Zostávajúcich dní v izolácii: %1$d</string>
	<string name="welcome_title">Inteligentná karanténa Slovenskej republiky</string>
	<string name="welcome_attribution"></string>
	<string name="home_checkQuarantine">Vraciate sa zo zahraničia a ste registrovaný pre inteligentnú karanténu?</string>
	<string name="home_checkVerification">Overiť sa v mieste izolácie</string>
	<string name="home_checkVerification_none">V súčasnostni nie je požiadavka na overenie Vašej tváre a lokácie v izolácii, alebo už vypršala. Táto požiadavka však môže prísť kedykoľvek.\n\nNeopúšťajte miesto Vašej povinnej izolácie. Môžete sa dopustiť vážneho priestupku.</string>
	<string name="home_quarantineNotSetYet">Odpočet nebol zahájený</string>
	<string name="home_quarantineNotSetExplanation">Udeje sa tak autoritou pri prechode hranicou</string>
	<string name="home_quarantineStartsInFuture">Presuňte sa na adresu domácej izolácie do %1$s</string>
	<string name="profile_identifier">Nasledovné tlačítko odhalí Váš identifikátor karantény</string>
	<string name="profile_button">Zobraziť identifikátor</string>
	<string name="profile_notInQuarantine">Pred týmto krokom je potrebné sa zaregistrovať do karantény na úvodnej obrazovke</string>
	<string name="phoneVerification_title">Vaše telefónne číslo</string>
	<string name="phoneVerification_text">Prosím overte medzinárodnú predvoľbu a zadajte Vaše telefónne číslo</string>
	<string name="phoneVerification_explanation">Zadajte prosím telefónne číslo, na ktoré Vás budú môcť zdravotníci kontaktovať, v prípade, že ste boli v kontakte s infikovanou osobou.</string>
	<string name="phoneVerification_privacyConsent">Pokračovaním súhlasím so spracúvaním údajov o mojom zdraví na účely ochrany života a zdravia v súvislosti so šírením vírusu COVID-19</string>
	<string name="phoneVerification_continue">Pokračovať</string>
	<string name="phoneVerification_invalidNumber">Telefónne číslo je neplatné, prosím skontrolujte zadané číslo</string>
	<string name="phoneVerification_notAgreed">Musíte súhlasiť so spracovaním údajov</string>
	<string name="phoneVerification_confirmTitle">Skontrolujte číslo</string>
	<string name="phoneVerification_confirmText">%1$s\n\nJe toto telefónne číslo správne?</string>
	<string name="phoneVerification_enterCode">Na zadané telefónne číslo sme poslali SMS s kódom.\n\nPre dokončenie overenia prosím zadajte nižšie prijatý 6-miestny kód.</string>
	<string name="phoneVerification_wrongCode">Nesprávny kód, zadajte ho prosím znova.</string>
	<string name="phoneVerification_leaveProcess">Ste si istý, že chcete opustiť túto obrazovku bez zadania kódu? Bez opätovnej autentifikácie sa sem nebudete môcť vrátiť.</string>
	<string name="covidPassVerification_covidPass">Toto je Váš špeciálny identifikátor pre potrebu kontroly</string>
	<string name="covidPassVerification_enterCode">Zadajte prosím 4-ciferné číslo sprostredkované autoritou</string>
	<string name="covidPassVerification_yourCode">Vaše 6-ciferné číslo je</string>
	<string name="status_cameraPermission">Prístup k fotoaparátu</string>
	<string name="status_locationEnabled">Lokačné služby</string>
	<string name="status_locationPermission">Prístup k lokácii</string>
	<string name="status_backgroundLocationPermission">Prístup k lokácii na pozadí</string>
	<string name="status_mockLocation">Simulovanie polohy</string>
	<string name="status_root">Root zariadenia</string>
	<string name="status_detected">Detekovaný</string>
	<string name="status_not_detected">Nedetekovaný</string>
	<string name="status_root_explanation">Na Vašom telefóne bol detekovaný root prístup. Pre úspešné overenie je nevyhnutné root prístup odstrániť.</string>
	<string name="status_forbiddenApps">Zakázané aplikácie</string>
	<string name="status_forbiddenApps_explanation">Na Vašom telefóne sú nainštalované aplikácie, ktoré môžu ovplyvniť výsledok overenia. Pre úspešné overenie je nevyhnutné tieto aplikácie odinštalovať.</string>
	<string name="status_currentLocation">Aktuálna poloha zariadenia</string>
	<string name="status_searching">Hľadám...</string>
	<string name="status_found">Nájdená</string>
	<string name="status_forbidden">Zakázané</string>
	<string name="status_forbid">Zakázať</string>
	<string name="status_none">Žiadne</string>
	<string name="status_uninstall">Odinštalovať</string>
	<string name="presenceCheck_title">Dôležité</string>
	<string name="presenceCheck_text">Aplikácia Vás žiada o overenie sa v mieste Vašej izolácie. Je potrebné reagovať okamžite a pokračovať rozpoznaním tváre. Aplikácia bude pristupovať k Vašemu fotoaparátu a GPS lokácii.</string>
	<string name="presenceCheck_warning">Ak sa chcete vyhnúť kontrole zo strany štátu, sprístupnite si všetky prístupy v nastaveniach aplikácie, čím skôr.\n\nViac informácii nájdete na stránke tu:</string>
	<string name="presenceCheck_url">https://korona.gov.sk/ekarantena/</string>
	<string name="faceid_title">Sledovanie tváre pre karanténu</string>
	<string name="faceid_text1">Prosím naskenujte Vašu tvár pre prípadnú verifikáciu pri dodržiavaní povinnej izolácie.</string>
	<string name="faceid_text2">Tento krok je povinný.</string>
	<string name="faceid_text3">Dáta sú uložené výhradne na Vašom zariadení.</string>
	<string name="faceid_start">Štart</string>
	<string name="faceid_thankYou">Ďakujeme</string>
	<string name="faceid_success">Dodržiavajte dôsledne domácu izoláciu. Zabránite tak šíreniu vírusu COVID-19.</string>
	<string name="faceid_sorry">Ľutujeme</string>
	<string name="faceid_failLicense">Neplatná licencia softvéru na overenie tváre, kontaktujte prosím dodávateľa aplikácie.</string>
	<string name="faceid_failCameraInit">Nepodarilo sa nainicializovať kameru, skúste to prosím znova.</string>
	<string name="faceid_failCameraAccess">Aplikácia nedostala prístup ku kamere, skúste to prosím znova.</string>
	<string name="faceid_failCameraPermission">Aplikácia nemá povolenie na prístup ku kamere, povoľte prosím tento prístup.</string>
	<string name="faceid_failCapture">Nepodarilo sa zachytiť tvár (%1$s), skúste to prosím znova.</string>
	<string name="faceid_failVerify">Nepodarilo sa overiť uložené charakteristiky tváre, skúste to prosím znova.</string>
	<string name="faceid_failHints">Pre lepšiu úspešnosť pri overení tváre nasledujte tieto inštrukcie:\n• držte telefón po celý čas vo výške očí,\n• snažte sa otočiť tvárou k zdroju svetla, nestojte chrbtom k oknu, aby ste nemali svetlo oproti Vám, ani nestojte priamo pod lampou, môžu spôsobovať tiene v tvári,\n• pokiaľ okuliare vytvárajú silnú reflexiu a zlyháva overenie, je vhodné si dať okuliare dole,\n• sledujte očami modrý alebo čierny bod na obrazovke,\n• prižmúrené oči môžu spôsobovať zlyhávanie overenia,\n• telefón držte po celý čas v jednej pozícii pokiaľ neprejdete celým procesom snímania tváre.</string>
</resources>